2020-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

	* .travis.yml: Switch to bionic and R 4.0.0

2020-06-08  Joseph Stachelek  <stachel2@msu.edu>

	* R/binb.R: Update natbib default from 'none' to 'default' to please
	current rmarkdown package

2020-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2019-12-17  Andras Svraka <svraka.andras@gmail.com>

	* inst/rmarkdown/templates/metropolis/resources/template.tex: Support
	titlegraphics yaml option

2019-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

	* docs/monashDemo.pdf: Copied from inst/monashDemo/
        * docs/monashOptions.pdf: Idem
	* README.md: Reference two longer Monash demos

2019-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'See also' section

2019-10-09  David Selby  <david@selbys.org.uk>

	* inst/rmarkdown/templates/presento/skeleton/presento.sty: Correctly
	the exported theme name to 'Presento'

2019-08-22  Rob Hyndman  <rob.hyndman@monash.edu>

	* inst/rmarkdown/templates/monash/skeleton/beamerfontthememonash.sty:
	Support additonal titlepage options
	* inst/rmarkdown/templates/monash/resources/template.tex: Idem
	* inst/monashDemo/monashOptions.Rmd: New demo showing more options
	* inst/monashDemo/monashOptions.pdf: Ditto
	* inst/monashDemo/title16x9.png: Graphic used in new demo

2019-08-21  Rob Hyndman  <rob.hyndman@monash.edu>

	* inst/rmarkdown/templates/monash/resources/template.tex: Allow
	alternate title page
	* inst/rmarkdown/templates/monash/skeleton/beamerfontthememonash.sty:
	Use bera as fallback font if carlito is not available

2019-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2019-06-20  Joseph Stachelek  <stachel2@msu.edu>

	* inst/rmarkdown/templates/presento/resources/template.tex: Correctly
	pull date from Rmd rather than hardcode today

2019-05-03  Johan Larson  <mail@larssonjohan.com>
